[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UI.tres" type="TileSet" id=1]
[ext_resource path="res://Objects/bingus_zone/Object_Grid.gd" type="Script" id=2]
[ext_resource path="res://Objects/bingus_zone/Placement_Object.gd" type="Script" id=3]
[ext_resource path="res://Sprites/teen/markers.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 57.75 )

[node name="Markers" type="Node2D"]
script = ExtResource( 3 )

[node name="Markers" type="Sprite" parent="."]
position = Vector2( 27, -1 )
texture = ExtResource( 4 )

[node name="Grid" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.266667 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 60, 60 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["object"]]
position = Vector2( 29, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, -61 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
